[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pianum"
version = "0.0.1"
description = "Music Theory package"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/chemtrails/pianum"
"Bug Tracker" = "https://github.com/chemtrails/pianum/issues"